--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -68,9 +68,9 @@
 
 			<div id="skill">  	<div id="stag"> <strong><u>COMPÉTENCES</u></strong></div>
 
-        <p><strong>CODING</strong></pi>
         <div id="skillbox">
-
+        
+          <p>CODING</pi>
           <div class="tooltip-container"  data-text="Efficace"> 
             <li>C, VSCode, GitHub </li>
             <div class="slider">
@@ -96,9 +96,11 @@
             <div class="slider">
               <div class="skills wip">45%</div>  </div>
           </div>
-        </div>  
-        <p><strong>DESIGN</strong></p>
+        </div>
+
         <div id="skillbox">
+          <p>DESIGN</p>
+          <!-- <p>DESIGN</p> -->
             <!-- <ul> -->
             <div class="tooltip-container"  data-text="Efficace"> 
               <li>Sketchup </li>
@@ -115,7 +117,7 @@
               <div class="slider">
                 <div class="skills good">70%</div>	</div>
             </div>
-            <div class="tooltip-container" data-text="En Projet">
+            <div class="tooltip-container" data-text="Capable">
               <li>Blender, 3Dmax </li>
               <div class="slider">
                 <div class="skills fine">60%</div>	</div>
@@ -128,12 +130,12 @@
         </div>
 			</div>
 
-      <div class="int">   <div id="stag">  <strong><u>INTERET</u></strong></div>
+      <div id="int">   <div id="stag">  <strong><u>INTERET</u></strong></div>
         <div id="intbox">
           <!-- <ul> -->
-            <li>		<strong>Lecture:</strong> &nbsp;&nbsp;&nbsp; Sci-Fi, Fantastique, Thriller  </li>
-            <li>	  <strong>Musique:</strong> &nbsp;&nbsp;&nbsp; Classique, Metal, Dubstep 	</li>
-            <li>		<strong>Amusement:</strong> &nbsp;&nbsp;&nbsp; Rasberry Pi, Jeux Société, Légo	</li>
+            <li>	<div class="no-wrap-text">	<strong>Lecture:</strong>    <p>Sci-Fi, Fantastique, Thriller</p>  </div></li>
+            <li>	<div class="no-wrap-text">   <strong>Musique:</strong>   <p>Classique, Metal, Dubstep</p>	 </div></li>
+            <li>	<div class="no-wrap-text"> 	<strong>Amusement:</strong>  <p>RasberryPi, Jeux-Société, Légo</p> </div></li>
           <!-- </ul> 			 -->
         </div>
       </div> 	
@@ -142,9 +144,9 @@
       <!-- 			-----------------------------			-----------------------------			 -->
 
 		<div id="main">
-			<div id="name">   <p>GERMAIN HEBERT</p>	</div>
+			<div id="name">   <p><strong> GERMAIN HEBERT</strong></p>	</div>
 			<div class="job">  
-				<div class="jobbox">  <p>Programmeur</p> 	</div>
+				<div class="jobbox">  <p>Programmeur / Developpeur</p> 	</div>
 			</div>				<!-- <div class="obj">		</div> -->
 
 			<div id="about">      <div id="mtag"><strong><u>PROFIL</u></strong></div>
