--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 			</div>
 		</div>
   </div> <!-- end container -->
-  <script src="./script.js">  </script>
+  <script src="script.js">  </script>
 </body>
 </html>
 
